prusti-tests/tests/verify_overflow/ui/core_proof/counterexamples/option.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/option.rs:9:11
   |
9  | #[ensures(!result)]
   |           ^^^^^^^
   |
note: the error originates here
  --> $DIR/option.rs:10:1
   |
10 | / fn test_1(x: X) -> bool {
11 | |     match x.a {
12 | |         Some(2) => true,
13 | |         _ => false,
14 | |     }
15 | | }
   | |_^
note: counterexample for "x"
       value:   X {
            a: std::option::Option::Some(
                2,
            ),
        }
  --> $DIR/option.rs:10:11
   |
10 | fn test_1(x: X) -> bool {
   |           ^
note: counterexample for "result"
       value:   true
  --> $DIR/option.rs:12:20
   |
12 |         Some(2) => true,
   |                    ^^^^

error: aborting due to previous error

